[package]
name = "sherlog-ring-buffer"
version = "0.1.0"
edition = "2021"
description = "MPSC Ring Buffer for Android logging in Rust"
authors = ["Navneet Kumar"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Atomic operations
atomic = "0.6"
crossbeam-utils = "0.8"

# Memory mapping for persistent storage
memmap2 = "0.9"

# Checksum calculation
crc32fast = "1.3"

# JNI for Android integration
jni = { version = "0.21", optional = true }

# Swift bindings for iOS integration
swift-bridge = { version = "0.1", optional = true }

# Global initialization
once_cell = "1.19"

# Threading utilities
parking_lot = "0.12"

[features]
default = ["android"]
android = ["jni"]
ios = ["swift-bridge"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
# Testing utilities
tempfile = "3.7"
